added text element in carousel

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                 <div class="carousel-image image-outer pos-5">
                     <img src="https://images.unsplash.com/photo-1505693416388-ac5ce068fe85?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Bedroom Design">
                 </div>
+                <!-- Courousel Text Image -->
+                <div class="carousel-text pos-6">
+                    <img src="static/tydw.png" alt="Live your Dream with">
+                </div>
             </div>
             
             <button class="carousel-button next">
